objects/Agency_Service_Providers__mdt.object
<CustomObject><fields>
        <fullName>Agency_Field__c</fullName>
        <label>Agency Field</label>
        <metadataRelationshipControllingField>Agency_Service_Providers__mdt.Object_Type__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Agency_Service_Providers</relationshipLabel>
        <relationshipName>Agency_Service_Providers</relationshipName>
        <type>MetadataRelationship</type>
    </fields><fields>
        <fullName>Agency_Owner_Email__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Agency Owner Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Agency_Service_Providers</relationshipLabel>
        <relationshipName>Agency_Service_Providers</relationshipName>
        <type>MetadataRelationship</type>
    </fields><label>Agency Service Providers</label><pluralLabel>Agency Service Providers</pluralLabel><visibility>Public</visibility></CustomObject>